tests/compile-fail/Rule_15_6.rs
fn main() {
    loop
        let _ = 1;
        //~^ ERROR expected `{`, found `let`
}
